--- a/face_stylesheet.css
+++ b/face_stylesheet.css
@@ -38,11 +38,16 @@ select{
     padding: 10px;
     margin: 5px 10px 10px 10px;
 }
-@media only screen and (min-width:320px) and (max-width:720px){
+@media only screen and (min-width:320px) and (max-width:800px){
     #container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
         grid-gap: 20px;
         padding: 10px;
+    }
+    select{
+        padding: 10px;
+        margin: 5px 10px 10px 10px;
+        width: 50%;
     }
 }
