--- a/cart_stylesheet.css
+++ b/cart_stylesheet.css
@@ -1,17 +1,18 @@
 #outside{
     width: 70% ;
     margin: auto;
-   
+   margin-top: 20px;
+   margin-bottom: 20px;
     display: flex;
 }
 #inside1{
-    width:60%;
+    width:70%;
     margin-right: 20px;
 }
 #inside1>img{
     width: 100%;
 }
-h5{
+#he{
     border-top: 2px solid black;
     padding: 15px;
     background-color: rgb(213, 220, 231);
@@ -41,7 +42,7 @@ h5{
   padding: 5px;
   margin: 10px;
 }
-span{
+#sp{
   font-size: 10px;
   font-weight: bold;
 }
@@ -89,7 +90,7 @@ text-align: center;
 font-size: 15px;
 }
 
-p{
+#bag,#code,#offer>p{
 font-size: 12px;
 margin-left: 10px;
 }
@@ -110,7 +111,7 @@ font-size: 25px;
 padding: 5px;
 border-bottom: 2px solid black;
 }
-input{
+#get{
 width: 92%;
 height: 30px;
 margin-left: 10px;
