--- a/face_stylesheet.css
+++ b/face_stylesheet.css
@@ -8,19 +8,11 @@
     grid-gap: 20px;
     padding: 10px;
     padding: 20px;
-<<<<<<< Updated upstream
-=======
-     font-family: 'Roboto', sans-serif;
->>>>>>> Stashed changes
 }
-.asd{
+img{
     width:100%;
 }
 #container>div{
-<<<<<<< Updated upstream
-=======
-     font-family: 'Roboto', sans-serif;
->>>>>>> Stashed changes
     align-items: center;
     text-align: center;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -32,10 +24,6 @@ button{
     border: 0px;
     padding: 10px;
     margin-bottom: 15px;
-<<<<<<< Updated upstream
-=======
-     font-family: 'Roboto', sans-serif;
->>>>>>> Stashed changes
 }
 #first{
     display: flex;
@@ -62,8 +50,4 @@ select{
         margin: 5px 10px 10px 10px;
         width: 50%;
     }
-<<<<<<< Updated upstream
 }
-=======
-}
->>>>>>> Stashed changes
